	  rcfile option, and the toggle Meta-E.  Note that this doesn't
	  affect tabs entered using verbatim input, and that it's
	  disabled when NANO_SMALL is defined.  Also, change the short
	  command line option for --backupdir from -E to -C.  Changes to
	  toggle_init(), usage(), do_tab(), main(), nanorc.sample,
	  nano.1, nanorc.5, and nano.texi. (DLR, suggested by many
	  people)
	- Change the REVERSE_SEARCH flag to the BACKWARDS_SEARCH flag.
	  (DLR)
	- Change the SMOOTHSCROLL flag to the SMOOTH_SCROLL flag. (DLR)
	- Change the NO_UTF8 flag to the USE_UTF8 flag, and reverse its
	  meaning. (DLR)
	- Add rcfile options "casesensitive" and "backwards", to do
	  case sensitive and backwards searches by default.  Changes to
	  nanorc.sample and nanorc.5. (DLR)
	- Since the DISABLE_CURPOS flag is only used in winio.c, reduce
	  it to a static bool there.  Changes to statusbar() and
	  disable_cursorpos(). (DLR)
	- Add -U/--quickblank option, a Meta-U toggle, and a
	  "quickblank" rcfile option to blank the statusbar after 1
	  keystroke instead of 25.  Note that this is disabled when
	  NANO_SMALL is defined.  Changes to toggle_init(), usage(),
	  main(), statusbar(), nanorc.sample, nano.1, and nanorc.5.
	  (DLR, suggested by CHAO Wei-Lun)
- chars.c:
  make_mbstring()
	- Change erroneous ENABLE_EXTRA #ifdef to NANO_EXTRA to fix a
	  compilation problem when --enable-nanorc isn't used and
	  --enable-extra is. (DLR)
- cut.c:
  cut_line()
	- Set placewewant properly after cutting a line, to avoid a
	  problem where the screen won't be updated if (a) we're not on
	  the first page when we cut the line, and (b) immediately after
	  we cut the line, we hit End to move to the end of the line
	  after it. (DLR)
- files.c:
  read_line()
	- Rename variable prev to prevnode to avoid confusion. (DLR)
  load_open_file()
	- Remove an unneeded clearok(FALSE). (DLR)
  get_next_filename()
	- Use an unsigned long instead of an int for the number
	  prepended to the filename. (DLR)